--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,6 @@
         "j4mie/idiorm": "v1.5.1",
         "monolog/monolog": "1.21.0",
         "phpmailer/phpmailer" : "v5.2.16",
-        "twig/twig" : "v1.24.1"
+        "twig/twig" : "v1.24.*"
     }
 }
